[package]
name = "replace_sh"
version = "1.0.0"
authors = ["Eric Semeniuc <3838856+esemeniuc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.4"
rocket_cors = "0.5.2"
names = "0.11.0"
rust-embed="5.5.1"