[package]
name = "replace_sh"
version = "1.0.0"
authors = ["Eric Semeniuc <3838856+esemeniuc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
juniper = "0.14.2"
rust-embed= "5.5.1"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-cors = "0.2.0"
serde_json = "1.0.51"
mime_guess = "2.0.3"
names = "0.11.0"